# wenet_encapsulation

./: .gitignore  README.md  conformer_179  setup.cfg  setup.py  test.py  wenet_model.py
py/: __init__.py  wenet_model.py
py/wenet/ssl/w2vbert/: convert_w2vbert_to_wenet_config_and_ckpt.py  w2vbert.py
py/wenet/transformer/: decoder.py
wenet/: __init__.py
wenet/cli/: conformer_179  model.py
wenet/dataset/: dataset.py
wenet/dataset/deprecated/: dataset.py  processor.py
wenet/ssl/w2vbert/: encoder.py  w2vbert_model.py
wenet/utils/: checkpoint.py  init_model.py  train_utils.py
wenet_encapsulation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
wenet_infer/: __init__.py
