[metadata]
name = wenet_infer
version = 0.1.1
license = Apache Software License
description = End to end speech recognition toolkit
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
